--- a/L11/SQLite3.ipynb
+++ b/L11/SQLite3.ipynb
@@ -187,7 +187,9 @@
     "Within the chinook database we want to create a table that holds each Employee ID and their total sales amount from the invoices they are associated with.\n",
     "- Step 1: Write a query to sum the total sales per employee ID\n",
     "- Step 2: Create a table called sales in the chinook database that holds two columns: the employee ID and the sale amount\n",
-    "- Step 3: To see if your insert was successful, join the employee ID columns of the employee table and your table to see their names"
+    "- Step 3: To see if your insert was successful, join the employee ID columns of the employee table and your table to see their names\n",
+    "\n",
+    "Complete the queries below to run this exercise. In many cases, if a query is partially formed, you must complete it where you see the three dots (...)"
    ]
   },
   {
@@ -225,21 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'c' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-6f81c4cc992a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#Create Table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"CREATE TABLE sales ('employeeID' INT NOT NULL, 'total' DECIMAL NOT NULL)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m#Insert into Table - from your df above\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'c' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Step 2\n",
     "\n",
@@ -249,7 +239,7 @@
     "#Insert into Table - from your df above several values\n",
     "c.execute(\"INSERT INTO sales VALUES (3, 833.04)\")\n",
     "c.execute(\"INSERT INTO sales VALUES (4,)\")\n",
-    "c.execute(\"INSERT INTO sales VALUES )\n",
+    "c.execute(\"INSERT INTO sales VALUES ... )\n",
     "\n"
    ]
   },
@@ -260,7 +250,7 @@
    "outputs": [],
    "source": [
     "#Step 3\n",
-    "for row in c.execute('select e.firstName, s.total from sales s inner join employees e on e.employeeid = s.employeeid'):\n",
+    "for row in c.execute('select ... '):\n",
     "print(row)\n"
    ]
   },
