--- a/L11/SQLite3.ipynb
+++ b/L11/SQLite3.ipynb
@@ -200,7 +200,7 @@
    "source": [
     "#Step 1 - run this, but make sure you understand how it works\n",
     "query = \"SELECT c.SupportRepID, sum(total) dollars_spent FROM invoices i INNER JOIN Customers c ON c.customerID = i.CustomerID GROUP BY SupportRepID}\"\n",
-    "df = pd.read_sql_query(query, conn)\n",
+    "df = pd.read_sql_query(query, con)\n",
     "df"
    ]
   },
@@ -273,21 +273,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
