Folder and Pymongo Changes

--- a/L11/PyMongo.ipynb
+++ b/L11/PyMongo.ipynb
@@ -28,9 +28,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PyMongo import MongoClient\n",
+    "import pymongo\n",
+    "from pymongo import MongoClient\n",
     "import pandas as pd\n",
-    "client = MongoClient('mongodb+srv://MongoMarc:jyxkah-moqzAd-myqvi0@marc1-k2auc.mongodb.net/test?retryWrites=true')  #Dr.Rigas connection string\n",
+    "client = MongoClient('')  #You need to use a connection string provided by your instructor\n",
     "db = client.test\n",
     "restaurants = db.restaurants"
    ]
@@ -127,7 +128,7 @@
    "outputs": [],
    "source": [
     "for rest in restaurants.find({},{\"restaurant_id\" : 1,\"name\":1,\"...,\"_id\":0}).limit(...):\n",
-    "print(rest)"
+    "   print(rest)"
    ]
   },
   {
@@ -144,7 +145,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "print(rest)"
+    "   print(rest)"
    ]
   },
   {
@@ -161,14 +162,14 @@
    "outputs": [],
    "source": [
     "\n",
-    "print(rest)"
+    "   print(rest)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#4. Due to a recent inventory mishap, a client needs the names and addresses for the Mexican restaurants north of the Central Park Zoo (longitude: 40.7678). Do not return the id. This client already visited the first 45, so skip those and sort the next 20 restaurants in ascending order by name. __Hint__: will need to make use of pymongo.ASCENDING. You can also use a a property of the address atribute, address.coord"
+    "#4. Due to a recent inventory mishap, a client needs the names and addresses for the Mexican restaurants north of the Central Park Zoo (lattitude: 40.7678). Do not return the id. This client will only visit the first 20 restaurants in ascending order by name, so only return those. __Hint__: will need to make use of pymongo.ASCENDING. You can also use a a property of the address atribute, address.coord. You are lucky in this case that the longitudes are all negative numbers so you can find an easy way to search for a lattitude number greater than the lattitude of interest."
    ]
   },
   {
@@ -177,14 +178,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(rest)"
+    "    print(rest)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#5. Did you know that MongoDB also supports regular expressions? We have a client that can't remember the name of a restaurant they rated. All this client knows is that it was an American cuisine restaurant in Manhattan whose name started with \"Mad\". We have a few of these in our database. We will create a dataframe of these restaurants to send to our client. Fill in the missing detail below to run this and print the result. "
+    "#5. Did you know that MongoDB also supports regular expressions? We have a client that can't remember the name of a restaurant they rated. All this client knows is that it was an American cuisine restaurant in Manhattan whose name started with \"Mad\". We have a few of these in our database. We will create a dataframe of these restaurants to send to our client. Fill in the missing detail below to run this and print the result (__Hint__: The MongoDB regex operator includes an anchor character '^' -- it can go before anything you want to see at the start of a string)"
    ]
   },
   {
@@ -194,7 +195,7 @@
    "outputs": [],
    "source": [
     "mysteryRestaurant = []\n",
-    "for rest in restaurants.find({\"name\": {\"$regex\" : \"^Mad\"}, \"cuisine\": \"American\", \"borough\": \"Manhattan\"}):\n",
+    "for rest in restaurants.find({\"name\": {\"$regex\" : \"\"}, \"cuisine\": \"\", \"borough\": \"Manhattan\"}):\n",
     "    mysteryRestaurant.append(rest)\n",
     "result = pd.dataframe(...)\n",
     "result"
