--- a/SU2020_Jupyter.ipynb
+++ b/SU2020_Jupyter.ipynb
@@ -211,7 +211,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Now, use the next cell to write a query that displays all of the customers from the customers table"
+        "Now, you try. In the next cell, write a similar command and query to cycle through and display all of the customers from the customers table:"
       ]
     },
     {
@@ -246,7 +246,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In the cell below, create a dataframe that holds all of Chinook's Canadian customers, by completing the query that is started:"
+        "In the cell below, create a dataframe that holds all of Chinook's Canadian customers (Their residence country is Canada), by completing the query that is started:"
       ]
     },
     {
@@ -285,31 +285,6 @@
       "source": [
         "invoicePerCountry = \n",
         "invoicePerCountry"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ozAGqJA9cmo_",
-        "colab_type": "text"
-      },
-      "source": [
-        "For each record in the Album table, we want the Title along with the Name of the Artist. This will require an inner join!"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "trusted": false,
-        "id": "Ul5bjQk8cmpA",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "records = \n",
-        "records"
       ],
       "execution_count": null,
       "outputs": []
@@ -398,7 +373,7 @@
         "\n",
         "#Insert into Table - from your df above choose several values\n",
         "c.execute(\"INSERT INTO sales VALUES (3, 833.04)\")\n",
-        "c.execute(\"INSERT INTO sales VALUES (4,)\")\n",
+        "c.execute(\"INSERT INTO sales VALUES (4,...)\")\n",
         "c.execute(\"INSERT INTO sales VALUES ... )\n",
         "\n"
       ],
@@ -446,26 +421,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uq9h4NsYcMac",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Intro to Jupyter Notebook and Other Useful Techniques!"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "Dpv4TJvoediU"
-      },
-      "source": [
-        "Jupyter Notebook is a very useful tool to write organized Python code. Instead of writing all of your code in one long script, Jupyter Notebook allows you to organize your code in chunks called cells. This text cell (and the heading) are made in a markdown cell - it can be used to write notes about your code or hold long non-code blocks of text! Some people even write entire reports or presentations in Jupyter Notebook. This is great if you want to include a lot of code or run code during a presentation. Using the dropdown menu between the refresh and keyboard buttons, change the next cell to markdown, type something, and press the \"run\" button above to run it!"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "trusted": true,
@@ -482,38 +437,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "diTQlT2vcMaw",
-        "colab_type": "text"
-      },
-      "source": [
-        "This is some new text! "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "aTrRwTWncMaz",
-        "colab_type": "text"
-      },
-      "source": [
-        "Hover over the white buttons starting with the save icon to learn what each one does!"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-YpCLfMhcMa1",
-        "colab_type": "text"
-      },
-      "source": [
-        "Keyboard Shortcuts\n",
-        "- ctrl + enter: run a cell\n",
-        "- when the cell has a BLUE box around it (clicking by the 'In []:' part of the page), press a to add a cell above it and b to add a cell below it"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Z795WPlQbs3r",
         "colab_type": "text"
       },
@@ -522,14 +445,27 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rfgK5WvJjX8d",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "KGIt_X1Fbs3u",
         "colab_type": "text"
       },
       "source": [
-        "In this activity, you will use Python to interact with a Mongo Database stored on a remote (Cloud) server! This is very realistic in terms of how you might interact with a NoSQL database like MongoDB.  It will be large and not stored on a single machine and certainly not on your local machine. \n",
-        "We have a loaded a collection of documents about restaurants in New York City into a MongoDB cluster. First you will import the necessary modules, PyMongo and Pandas. Next you establish a connection to the cluster (either Morgan's or Dr. Rigas') using a connection string. Lastly you specify the database and collection within the cluster that we want to work with."
+        "We can also use Python to interact with a Mongo Database stored on a remote (Cloud) server! This uses a Python Library/API called PyMongo. This is very realistic in terms of how you might interact with a NoSQL database like MongoDB.  It will be large and not stored on a single machine and certainly not on your local machine. \n",
+        "We have a loaded a collection of documents about restaurants in New York City into a MongoDB cluster. First you will import the necessary modules, PyMongo and Pandas. Next you establish a connection to the cluster (Mongo requires that you authenticate as an authorized user with a 'connection string' that will be provided by your instructor) using a connection string. Lastly you specify the database and collection within the cluster that we want to work with."
       ]
     },
     {
@@ -568,7 +504,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Querying is basically the same as you would in your command prompt. The only difference is that PyMongo doesn't support .pretty(). For a simple example: to find one of the Bronx restaurants run the cell below and see the output."
+        "Querying is basically the same as you would in your command prompt. The only difference is that PyMongo doesn't support .pretty() -- the reason for this is that Python has many other ways to make the data pretty. For a simple example: to find one of the Bronx restaurants run the cell below and see the output.\n"
       ]
     },
     {
@@ -683,35 +619,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GQfyYuiGbs4t",
-        "colab_type": "text"
-      },
-      "source": [
-        "#2. Find the first 10 restaurants who have received a _score less than_ 50."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "F4VbwCcDbs4v",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "   print(rest)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "5hrDpBKvbs41",
         "colab_type": "text"
       },
       "source": [
-        "#3. Return _only_ the name, cuisine, and borough for 20 documents that are _NOT IN_ the Bronx, Queens, or Staten Island (Hint: There is a Mongo method called $nin for \"not in\".)"
+        "#2. Return _only_ the name, cuisine, and borough for 20 documents that are _NOT IN_ the Bronx, Queens, or Staten Island (Hint: There is a Mongo method called $nin for \"not in\".)"
       ]
     },
     {
@@ -731,34 +643,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vxwzYRMQbs49",
-        "colab_type": "text"
-      },
-      "source": [
-        "#4. Due to a recent inventory mishap, a client needs the names and addresses for the Mexican restaurants north of the Central Park Zoo (lattitude: 40.7678). Do not return the id. This client will only visit the first 20 restaurants in ascending order by name, so only return those. __Hint__: will need to make use of pymongo.ASCENDING. You can also use a a property of the address atribute, address.coord. You are lucky in this case that the longitudes are all negative numbers so you can find an easy way to search for a lattitude number greater than the lattitude of interest."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0hx1h0Shbs49",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "    print(rest)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "e7pLp8hObs5E",
         "colab_type": "text"
       },
       "source": [
-        "#5. Did you know that MongoDB also supports regular expressions? We have a client that can't remember the name of a restaurant they rated. All this client knows is that it was an American cuisine restaurant in Manhattan whose name started with \"Mad\". We have a few of these in our database. We will create a dataframe of these restaurants to send to our client. Fill in the missing detail below to run this and print the result (__Hint__: The MongoDB regex operator includes an anchor character '^' -- it can go before anything you want to see at the start of a string)"
+        "# 3. PyMongo (and MongoDB more generally) supports a powerful tool in programming called 'regular expressions' Regular expressions are ways for you to find strings that are not exact but are similar to exmaple strings. Here is a simple example: We have a client that can't remember the name of a restaurant where they believe they got sick. All this client knows is that it was an **American** cuisine restaurant in **Manhattan** whose name started with \"Mad\". We can create a dataframe with a list of such restaurants to send to our client. Fill in the missing detail below to run this and print the result (__Hint__: There is a regex operator called an anchor that matches characters at the beginning of a string -- it is the carat('^') -- it can go before anything you want to see at the start of a string)\n"
       ]
     },
     {
@@ -772,7 +661,7 @@
         "mysteryRestaurant = []\n",
         "for rest in restaurants.find({\"name\": {\"$regex\" : \"\"}, \"cuisine\": \"\", \"borough\": \"Manhattan\"}):\n",
         "    mysteryRestaurant.append(rest)\n",
-        "result = pd.dataframe(...)\n",
+        "result = pd.dataframe(mysteryRestaurant)\n",
         "result"
       ],
       "execution_count": null,
